--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,12 @@
     <title></title>
 </head>
 <body>
+helolo
+
+    <script src="js/external/jquery-1.10.2.js"></script>
+    <script src="js/external/underscore.js"></script>
+    <script src="js/external/backbone.js"></script>
+    <script src="js/app/app.js"></script>
 
 </body>
 </html>
